# FuckProtect

./: QWEN.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  test.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/fuckprotect/: MainActivity.java
app/src/main/res/values/: strings.xml
common/: build.gradle.kts
common/src/main/java/com/fuckprotect/common/: Constants.kt  CryptoParams.kt  PayloadFormat.kt
common/src/test/java/com/fuckprotect/common/: ConstantsTest.kt
doc/: PUSH-TO-GITHUB.md  SETUP-GUIDE.md  dpt-analysis.md  planning.md  project-arch.md  research.md  sprint11-12-report.md  sprint13-report.md  test-report.md  todo.md
gradle/: libs.versions.toml
protector/: build.gradle.kts
protector/src/main/java/com/fuckprotect/protector/: Protector.kt
protector/src/main/java/com/fuckprotect/protector/apk/: ApkPackager.kt  ApkParser.kt  ApkSigner.kt  ManifestEditor.kt
protector/src/main/java/com/fuckprotect/protector/builder/: Aab.java  AndroidPackage.java  Apk.kt  ApkParser.kt
protector/src/main/java/com/fuckprotect/protector/config/: Const.java  ExclusionRules.kt  ProtectorConfig.kt  ShellConfig.java
protector/src/main/java/com/fuckprotect/protector/dex/: DexEncryptor.kt  DexParser.kt  JunkCodeGenerator.kt  KeyDerivation.kt  PayloadBuilder.kt
protector/src/main/java/com/fuckprotect/protector/dex/hollow/: DexMethodHollower.kt
protector/src/main/java/com/fuckprotect/protector/elf/: ReadElf.java
protector/src/main/java/com/fuckprotect/protector/embedder/: SignatureEmbedder.kt
protector/src/main/java/com/fuckprotect/protector/gradle/: FuckProtectExtension.kt  FuckProtectPlugin.kt  FuckProtectTask.kt
protector/src/main/java/com/fuckprotect/protector/model/: DexCode.java  Instruction.java  MultiDexCode.java
protector/src/main/java/com/fuckprotect/protector/native/: SoFileEncryptor.kt
protector/src/main/java/com/fuckprotect/protector/res/: AabManifestEditor.java  AndroidResourcesEditor.java  ManifestEditor.kt
protector/src/main/java/com/fuckprotect/protector/task/: ThreadPool.java
protector/src/main/java/com/fuckprotect/protector/util/: ApkSigner.kt  CryptoUtils.java  DexUtils.java  Endian.java  FileUtils.java  HexUtils.java  IoUtils.java  KeyUtils.java  LogUtils.java  MessageDigestUtils.java  MultiDexCodeUtils.java  SignatureEmbedder.kt  SoFileEncryptor.kt  StringUtils.java  TypeUtils.java  ZipAlignUtils.kt  ZipUtils.java
protector/src/main/java/com/fuckprotect/protector/utils/: ZipAlignUtils.kt
protector/src/test/java/com/fuckprotect/protector/apk/: EndToEndProtectionTest.kt  ManifestEditorTest.kt
protector/src/test/java/com/fuckprotect/protector/dex/: DexEncryptionRoundTripTest.kt  DexParserTest.kt  KeyDerivationTest.kt
protector/src/test/java/com/fuckprotect/protector/embedder/: SignatureEmbedderTest.kt
scripts/: encrypt_strings.py  run-tests.sh
shell/: build.gradle.kts  proguard-rules.pro
shell/src/androidTest/java/com/fuckprotect/shell/: JniCryptoRoundTripTest.kt
shell/src/androidTest/java/com/fuckprotect/shell/antidbg/: AntiDebugTest.kt
shell/src/androidTest/java/com/fuckprotect/shell/integrity/: SignatureTamperTest.kt
shell/src/androidTest/java/com/fuckprotect/shell/loader/: DexLoaderTest.kt
shell/src/main/: AndroidManifest.xml
shell/src/main/cpp/: CMakeLists.txt  dpt.cpp  dpt_anti_hook.cpp  dpt_crypto.cpp  dpt_hook.cpp  dpt_plt.cpp  dpt_risk.cpp  dpt_util.cpp  dpt_verify.cpp  shell_native.cpp
shell/src/main/cpp/antidbg/: anti_debug.cpp  continuous_monitor.cpp  protect_process.cpp
shell/src/main/cpp/common/: dpt_string.cpp
shell/src/main/cpp/crypto/: aes.c  key_derive.c
shell/src/main/cpp/hook/: anti_hook.cpp  native_hook.cpp  plt_check.cpp
shell/src/main/cpp/integrity/: self_check.cpp  self_integrity.cpp
shell/src/main/cpp/rc4/: rc4.c
shell/src/main/cpp/reflect/: java_lang_System.cpp
shell/src/main/cpp/utils/: string_obfuscate.cpp
shell/src/main/java/com/fuckprotect/shell/: Global.java  JniBridge.java  ProxyApplication.java  ThisApplication.java
shell/src/main/java/com/fuckprotect/shell/factory/: ProxyComponentFactory.java
shell/src/main/java/com/fuckprotect/shell/integrity/: ApkIntegrity.java  SignatureVerifier.java
shell/src/main/java/com/fuckprotect/shell/loader/: ClassLoaderProxy.java  DexLoader.java
shell/src/main/java/com/fuckprotect/shell/util/: EnvUtils.java  FileUtils.java
shell/src/main/java/com/fuckprotect/shell/utils/: Logger.java  ReflectUtils.java
